--- a/intro.bib
+++ b/intro.bib
@@ -379,14 +379,14 @@
 @misc{tybn1,
    title={Tatvayogabiṃdu},
    subtitle={Tatvayogabiṃdu},
-   howpublished={Ms. No. B 38-31, NGMPP Reel No. NAK 5/2724. National Archives of Nepal, Kathmandu},
+   howpublished={NGMPP Reel No. B 38-31, National Archives of Nepal, Kathmandu},
    keywords={primary},
 }%!
 
 @misc{tybn2,
    title={Tatvayogabiṃdu},
    subtitle={Tatvayogabiṃdu},
-   howpublished={Ms. No. B 38-35 and A 1327-14, NGMPP Reel No. 3-750. National Archives of Nepal, Kathmandu},
+   howpublished={NGMPP Reel No. B 38-35 and A 1327-14, National Archives of Nepal, Kathmandu},
    %shorthand={N\textlowerscript{2}},
    keywords={primary},
 }%!
@@ -447,6 +447,140 @@
    note={NGMPP Reel No. E 1189-13. National Archives of Nepal, Kathmandu},
    keywords={primary},
 }%!
+
+@misc{nepal1,
+   title={Kālītattva},
+   subtitle={Kālītattva},
+   howpublished={NGMPP Reel No. A 207-4. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:0]{index=0}
+
+@misc{nepal2,
+   title={Mādhavanidāna},
+   subtitle={Mādhavanidāna},
+   howpublished={NGMPP Reel No. A 224-11. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:1]{index=1}
+
+@misc{nepal3,
+   title={Mṛtyuharalāṅgalaṣaḍakṣaramantravidhi},
+   subtitle={Mṛtyuharalāṅgalaṣaḍakṣaramantravidhi},
+   howpublished={NGMPP Reel No. A 246-19. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:2]{index=2}
+
+@misc{nepal4,
+   title={Skandapurāṇa},
+   subtitle={Skandapurāṇa},
+   howpublished={NGMPP Reel No. A 259-5. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:3]{index=3}
+
+@misc{nepal5,
+   title={Skandapurāṇa},
+   subtitle={Skandapurāṇa},
+   howpublished={NGMPP Reel No. A 292-9. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal6,
+   title={Skandapurāṇa},
+   subtitle={Skandapurāṇa},
+   howpublished={NGMPP Reel No. A 300-2. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal7,
+   title={Vṛttaratnākara},
+   subtitle={Vṛttaratnākara},
+   howpublished={NGMPP Reel No. A 356-7. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal8,
+   title={Saṃjñāvivekavivṛti},
+   subtitle={Saṃjñāvivekavivṛti},
+   howpublished={NGMPP Reel No. A 414-28(2). National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal9,
+   title={Ratnadīpa},
+   subtitle={Ratnadīpa},
+   howpublished={NGMPP Reel No. A 423-42. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:4]{index=4}
+
+@misc{nepal10,
+   title={Raudriyameghamālā},
+   subtitle={Raudriyameghamālā},
+   howpublished={NGMPP Reel No. A 424-16. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  
+
+@misc{nepal11,
+   title={Siddhāntaśiromaṇi},
+   subtitle={Siddhāntaśiromaṇi},
+   howpublished={NGMPP Reel No. A 432-12. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal12,
+   title={Sañjñātantra},
+   subtitle={Sañjñātantra},
+   howpublished={NGMPP Reel No. A 433-9. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:6]{index=6}
+
+@misc{nepal13,
+   title={Apāmārjanastotra},
+   subtitle={Apāmārjanastotra},
+   howpublished={NGMPP Reel No. A 468-41. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal14,
+   title={(Śivaprokta) Īśvarasahasranāmastotra},
+   subtitle={(Śivaprokta) Īśvarasahasranāmastotra},
+   howpublished={NGMPP Reel No. A 471-3. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal15,
+   title={Prāyaścittaprakaraṇa},
+   subtitle={Prāyaścittaprakaraṇa},
+   howpublished={NGMPP Reel No. A 521-3. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!
+
+@misc{nepal16,
+   title={Vaiyākaraṇabhūṣaṇa},
+   subtitle={Vaiyākaraṇabhūṣaṇa},
+   howpublished={NGMPP Reel No. A 570-3. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:7]{index=7}
+
+@misc{nepal17,
+   title={Gotrapravaranirṇaya},
+   subtitle={Gotrapravaranirṇaya},
+   howpublished={NGMPP Reel No. B 407-13. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:8]{index=8}
+
+@misc{nepal18,
+   title={Kātantravṛttipañjikā},
+   subtitle={Kātantravṛttipañjikā},
+   howpublished={NGMPP Reel No. B 458-17. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%!  :contentReference[oaicite:9]{index=9}
+
+@misc{nepal19,
+   title={Kakṣapuṭa},
+   subtitle={Kakṣapuṭa},
+   howpublished={NGMPP Reel No. C 25-5. National Archives of Nepal, Kathmandu},
+   keywords={primary},
+}%! 
+
 
 @book{srivastava2017lal,
   author       = {Srivastava, Raju},
